iowow (1.2.10) UNRELEASED; urgency=medium

  * Added iwu_replace_char() (iwutils.h)
  * Fixed memory leak in iwpool_destroy() (iwpool.h)

 -- Anton Adamansky <adamansky@gmail.com>  Thu, 31 May 2018 23:19:32 +0700

iowow (1.2.9) testing; urgency=medium

  * Rewrite of iwftoa() (iwconv.h)
  * Fixed typo: iwtoa renamed to iwitoa (iwconv.h)
  * Added iwu_cmp_files (iwutils.h)
  * Return type of iwxstr_ptr() changed to char* (iwxstr.h)

 -- Anton Adamansky <adamansky@gmail.com>  Tue, 29 May 2018 01:01:56 +0700

iowow (1.2.8) testing; urgency=medium

  * IOWOW Ported to MIPS32 (big-endian) tested on Debian GNU/Linux 9.4

 -- Anton Adamansky <adamansky@gmail.com>  Sat, 19 May 2018 21:09:04 +0700

iowow (1.2.7) testing; urgency=medium

  * Fixed incorrect exclusive locking in iwkv_del()"

 -- Anton Adamansky <adamansky@gmail.com>  Thu, 17 May 2018 11:27:58 +0700

iowow (1.2.6) testing; urgency=medium

  * Fixed: database file is not created automatically if no open modes specified in opts

 -- Anton Adamansky <adamansky@gmail.com>  Wed, 16 May 2018 19:57:35 +0700

iowow (1.2.5) testing; urgency=medium

  * Added iwkv_opflags opflags into iwkv_del

 -- Anton Adamansky <adamansky@gmail.com>  Wed, 16 May 2018 19:33:16 +0700

iowow (1.2.4) testing; urgency=medium

  * Fixed race conditions in iwkv_cursor_to()

 -- Anton Adamansky <adamansky@gmail.com>  Mon, 14 May 2018 09:28:13 +0700

iowow (1.2.3) testing; urgency=medium

  *  Fixed race conditions in iwkv_cursor_set()

 -- Anton Adamansky <adamansky@gmail.com>  Fri, 11 May 2018 23:17:13 +0700

iowow (1.2.2) testing; urgency=medium

  * Added static iowow_s libraries to the default CMake exports.

 -- Anton Adamansky <adamansky@gmail.com>  Tue, 08 May 2018 22:58:41 +0700

iowow (1.2.1) testing; urgency=medium

  * Removed unistd.h from src/fs/iwdlsnr.h since it is not portable.
  * C++ friendly header files

 -- Anton Adamansky <adamansky@gmail.com>  Mon, 07 May 2018 12:47:46 +0700

iowow (1.2.0) testing; urgency=medium
