@@ -2,6 +2,7 @@ iowow (1.2.10) UNRELEASED; urgency=medium
 
   * Added iwu_replace_char() (iwutils.h)
   * Fixed memory leak in iwpool_destroy() (iwpool.h)
+  * Added iwpool_strdup(), iwpool_strndup() (iwpool.h)
 
  -- Anton Adamansky <adamansky@gmail.com>  Thu, 31 May 2018 23:19:32 +0700
 
